// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`config createPreset creates a preset including the default config 1`] = `
{
  "branches": [
    "main",
    "master",
    "+([0-9])?(.{+([0-9]),x}).x",
  ],
  "plugins": [
    "@semantic-release/commit-analyzer",
    [
      "@semantic-release/release-notes-generator",
      {
        "preset": "conventionalcommits",
        "presetConfig": {
          "types": [
            {
              "hidden": false,
              "section": "Build System",
              "type": "build",
            },
            {
              "hidden": false,
              "section": "Miscellaneous",
              "type": "chore",
            },
            {
              "hidden": false,
              "section": "Continuous Integration",
              "type": "ci",
            },
            {
              "hidden": false,
              "section": "Documentation",
              "type": "docs",
            },
            {
              "hidden": false,
              "section": "Features",
              "type": "feat",
            },
            {
              "hidden": false,
              "section": "Bug Fixes",
              "type": "fix",
            },
            {
              "hidden": false,
              "section": "Performance Improvements",
              "type": "perf",
            },
            {
              "hidden": false,
              "section": "Code Refactoring",
              "type": "refactor",
            },
            {
              "hidden": false,
              "section": "Styles",
              "type": "style",
            },
            {
              "hidden": false,
              "section": "Tests",
              "type": "test",
            },
          ],
        },
        "writerOpts": {
          "commitsSort": [
            "subject",
            "scope",
          ],
        },
      },
    ],
    [
      "@semantic-release/github",
      {
        "failComment": false,
        "failTitle": false,
        "labels": false,
        "releasedLabels": false,
        "successComment": false,
      },
    ],
    "a",
    "b",
    [
      "@semantic-release/exec",
      {
        "failCmd": "[ -x ./script/semantic-release-fail ] && ./script/semantic-release-fail '\${nextRelease.version}' || true",
        "publishCmd": "[ -x ./script/semantic-release-publish ] && ./script/semantic-release-publish '\${nextRelease.version}' || true",
        "successCmd": "[ -x ./script/semantic-release-success ] && ./script/semantic-release-success '\${nextRelease.version}' || true",
      },
    ],
  ],
}
`;

exports[`config semanticReleaseGit semantic-release/@git generates the right commit message for channel next 1`] = `
"ci(release): test 

This is a test release"
`;

exports[`config semanticReleaseGit semantic-release/@git generates the right commit message for channel undefined 1`] = `
"ci(release): test [skip ci]

This is a test release"
`;
